# issue-triager

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  TRIAGE_CRITERIA.md  prompt.md  pyproject.toml
app/: __init__.py  agent.py  config.py  demo_payloads.py  github_client.py  logging_utils.py  main.py  prompt_builder.py  schemas.py  triage_criteria.py  webhook_security.py
app/llm/: __init__.py  base.py  chatgpt.py  gemini.py  mock.py
data/: golden_dataset.json
doc/: github-pat.md  github-webhook.md  ngrok.md  prompt.md
docker/: Dockerfile
scripts/: eval_triage.py  simulate_webhook.py
tests/: conftest.py  test_agent_vague_issue.py  test_mock_llm_golden_dataset.py  test_signature.py  test_webhook_endpoint_smoke.py
