[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-triager"
version = "0.1.0"
description = "Agentic triage bot for GitHub issues with dynamic criteria and mock/Gemini LLM backends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "rich",
  "python-dotenv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
