[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-triager"
version = "0.1.0"
description = "Agentic triage bot for GitHub issues with dynamic criteria and mock/ChatGPT LLM backends."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "rich",
  "python-dotenv",
  "openai>=1.60.0",
  "PyGithub>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
